# RaylibVectorEditor

./: CMakeLists.txt
assets/shaders/: FXAA.fs
dependencies/: CMakeLists.txt
dependencies/imgui/: .gitmodules  CMakeLists.txt  imgui_spectrum.cpp
dependencies/imgui/backends/raylib/: rlImGui.cpp
dependencies/imgui/examples/example_sdl2_vulkan/: main.cpp
src/: Components.hpp  Core.hpp  Entity.cpp  Entity.hpp  Environment.cpp  Environment.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  Panel.cpp  Panel.hpp  PropertiesWindow.cpp  PropertiesWindow.hpp  RaylibApplication.cpp  RaylibApplication.hpp  RaylibObject.hpp  Scene.cpp  Scene.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Tool.cpp  Tool.hpp  ViewportCamera.cpp  ViewportCamera.hpp  ViewportCollisionResolver.cpp  ViewportCollisionResolver.hpp  ViewportWindow.cpp  ViewportWindow.hpp  main.cpp
